# pytorch-cka

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compare_cka_performances.ipynb  pyproject.toml
.github/workflows/: ci.yaml  docker.yaml
cka/: __init__.py  cka.py  hsic.py  viz.py
examples/: basic_comparison.py  computation_speed_comparison.ipynb  generate_all_plots.py  llm_usage.ipynb  memory_efficiency_comparison.ipynb
pytorch_cka/: __init__.py  cka.py  core.py  utils.py  viz.py
tests/: conftest.py  helpers.py  test_cka.py  test_cka_extended.py  test_config.py  test_core.py  test_huggingface_models.py  test_timm_models.py  test_torchvision_models.py  test_utils.py  test_viz.py
torchcka/: utils.py
