[project]
name = "pytorch_cka"
version = "0.1.2"
description = "Centered Kernel Alignment (CKA) with Efficient Computation and Layer-wise Visualization for PyTorch "
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Suhyeon (Sean) Yu", email = "suhyeon.yu.2789@gmail.com"}
]
keywords = ["pytorch", "cka", "centered kernel alignment", "neural networks", "machine learning", "representation", "similarity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",                                                      
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/ryusudol/Centered-Kernel-Alignment"
Repository = "https://github.com/ryusudol/Centered-Kernel-Alignment"
Issues = "https://github.com/ryusudol/Centered-Kernel-Alignment/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cka"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "torchvision>=0.15.0",
    "timm>=1.0.0",
    "transformers>=4.30.0",
]
